# xpu_cnn_tuning

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  requirements.txt  requirements_xpu.txt
configs/: cifar10.yaml  cifar10_xpu.yaml  cifar10_xpu2.yaml  cifar10_xpu_fused.yaml  resnet50_xpu.yaml
cpp/: custom_conv3x3_bn_relu_xpu.cpp  fused_conv3x3_bn_relu_xpu.cpp  fused_conv3x3_bnfold_relu_usm_xpu.cpp
scripts/: infer_cifar10.sh  sweep_fused_params.py  train_cifar10.sh  train_xpu_overlap.sh
src/: infer.py  train.py  train_xpu.py  train_xpu_overlap.py
src/models/: __init__.py  ops_fused_sycl_train.py  ops_fused_train.py  ops_tinycifarnet.py  tinycifarnet.py  wideresnet.py
src/utils/: augment.py  common.py  metrics.py  prefetch.py  runtime.py  sinks.py
